--- a/app/src/main/res/layout/item_circle_profile.xml
+++ b/app/src/main/res/layout/item_circle_profile.xml
@@ -26,10 +26,11 @@
         android:layout_marginStart="6dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="6dp"
+        android:textAlignment="center"
         android:textSize="10sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/avatar"
-        tools:text="First Name\nLast Name" />
+        tools:text="First name\nSecond name" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
