--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,4 +8,22 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="error">#D32F2F</color>
+
+    <color name="link_color">#0f6fec</color>
+    <color name="header_color">#14191e</color>
+    <color name="hint_color">#676a79</color>
+    <color name="border_color">#e1e4e6</color>
+    <color name="focused_border_color">#2882FA</color>
+    <color name="button_text_color">#e1e4e6</color>
+    <color name="active_button_color">#0F6FEC</color>
+    <color name="pressed_active_button_color">#0C59BD</color>
+
+    <color name="link_color_night">#3A4ECD</color>
+    <color name="header_color_night">#DDDDDD</color>
+    <color name="hint_color_night">#A8A8A8</color>
+    <color name="border_color_night">#2E2E2E</color>
+    <color name="focused_border_color_night">#0F328C</color>
+    <color name="button_text_color_night">#e1e4e6</color>
+    <color name="active_button_color_night">#2882FA</color>
+    <color name="pressed_active_button_color_night">#0C59BD</color>
 </resources>
