--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,11 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.Social" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Social" parent="Theme.AppCompat.DayNight.NoActionBar">
+        <!-- Windows background color. -->
+        <item name="android:colorBackground">@color/black</item>
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">@color/black</item>
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_200</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -9,10 +14,16 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="backgroundErrorLayoutColor">@color/error</item>
+        <item name="linkTextViewColor">@color/link_color_night</item>
+        <item name="headerTextViewColor">@color/header_color_night</item>
+        <item name="hintTextViewColor">@color/hint_color_night</item>
+        <item name="borderEditTextColor">@color/border_color_night</item>
+        <item name="borderFocusedEditTextColor">@color/focused_border_color_night</item>
+        <item name="buttonTextColor">@color/button_text_color_night</item>
+        <item name="backgroundButtonColor">@color/active_button_color_night</item>
+        <item name="backgroundPressedButtonColor">@color/pressed_active_button_color_night</item>
     </style>
 
     <style name="TextAppearanceDate" parent="@android:style/TextAppearance.Material.Small">
