--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,6 +1,13 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
     <!-- Base application theme. -->
-    <style name="Theme.Social" parent="Theme.MaterialComponents.DayNight.DarkActionBar">
+    <style name="Theme.Social" parent="Theme.AppCompat.Light.NoActionBar">
+<!--        &lt;!&ndash; Windows background color. &ndash;&gt;-->
+<!--        <item name="android:background">@color/black</item>-->
+<!--        <item name="android:colorBackground">@color/black</item>-->
+<!--        <item name="android:windowBackground">@color/black</item>-->
+        <!-- Status bar color. -->
+        <item name="android:statusBarColor">#E1E1E1</item>
+
         <!-- Primary brand color. -->
         <item name="colorPrimary">@color/purple_500</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
@@ -9,11 +16,19 @@
         <item name="colorSecondary">@color/teal_200</item>
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
-        <!-- Status bar color. -->
-        <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
+
+
         <!-- Customize your theme here. -->
         <item name="backgroundErrorLayoutColor">@color/error</item>
         <item name="textErrorLayoutColor">@color/white</item>
+        <item name="linkTextViewColor">@color/link_color</item>
+        <item name="headerTextViewColor">@color/header_color</item>
+        <item name="hintTextViewColor">@color/hint_color</item>
+        <item name="borderEditTextColor">@color/border_color</item>
+        <item name="borderFocusedEditTextColor">@color/focused_border_color</item>
+        <item name="buttonTextColor">@color/button_text_color</item>
+        <item name="backgroundButtonColor">@color/active_button_color</item>
+        <item name="backgroundPressedButtonColor">@color/pressed_active_button_color</item>
     </style>
 
     <style name="TextAppearanceDate" parent="@android:style/TextAppearance.Material.Small">
