--- a/app/src/main/res/layout/item_chat.xml
+++ b/app/src/main/res/layout/item_chat.xml
@@ -70,6 +70,6 @@
         app:layout_constraintStart_toEndOf="@+id/lastMessageText"
         app:layout_constraintTop_toBottomOf="@+id/chatTitle"
         app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/moon_new"
+        app:srcCompat="@drawable/ic_moon_new_24dp"
         app:tint="#fff" />
 </androidx.constraintlayout.widget.ConstraintLayout>
