--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -23,6 +23,7 @@
         <item name="borderFocusedEditTextColor">@color/focused_border_color_night</item>
         <item name="buttonTextColor">@color/button_text_color_night</item>
         <item name="backgroundButtonColor">@color/active_button_color_night</item>
+        <item name="backgroundDisableButtonColor">@color/disable_button_color_night</item>
         <item name="backgroundPressedButtonColor">@color/pressed_active_button_color_night</item>
     </style>
 
