--- a/app/src/main/res/values/attrs.xml
+++ b/app/src/main/res/values/attrs.xml
@@ -11,4 +11,5 @@
     <attr name="buttonTextColor" format="reference" />
     <attr name="backgroundButtonColor" format="reference" />
     <attr name="backgroundPressedButtonColor" format="reference" />
+    <attr name="backgroundDisableButtonColor" format="reference" />
 </resources>
