--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -128,7 +128,7 @@
         app:layout_constraintTop_toBottomOf="@+id/email_edit_text" />
 
     <Button
-        android:id="@+id/sign_me_button"
+        android:id="@+id/next_button"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="24dp"
@@ -141,7 +141,7 @@
         android:letterSpacing="0.0"
         android:paddingTop="14dp"
         android:paddingBottom="14dp"
-        android:text="Sign me up"
+        android:text="Next"
         android:textAllCaps="false"
         android:textColor="?attr/buttonTextColor"
         android:textSize="18sp"
