Improvements to the design of the chat list and messages.

--- a/app/src/main/res/layout/item_message.xml
+++ b/app/src/main/res/layout/item_message.xml
@@ -53,7 +53,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginEnd="2dp"
                 android:gravity="bottom|end"
-                android:textAppearance="@style/TextAppearanceDate"
+                android:textAppearance="@style/Messages.Time"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="1.0"
@@ -71,6 +71,7 @@
                 android:layout_marginEnd="4dp"
                 android:layout_marginBottom="4dp"
                 android:gravity="start|top"
+                android:textAppearance="@style/Messages.Body"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/message_date_text_view"
                 app:layout_constraintStart_toStartOf="parent"
