--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -17,6 +17,10 @@
         <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
 
+        <!-- Text color. -->
+        <item name="textColorPrimary">@color/black</item>
+        <item name="textColorSecond">@color/dark_gray</item>
+        <item name="textColorBackground">@color/gray</item>
 
         <!-- Customize your theme here. -->
         <item name="backgroundErrorLayoutColor">@color/error</item>
@@ -32,9 +36,42 @@
         <item name="backgroundPressedButtonColor">@color/pressed_active_button_color</item>
     </style>
 
-    <style name="TextAppearanceDate" parent="@android:style/TextAppearance.Material.Small">
-        <item name="android:textSize">10sp</item>
-        <item name="android:textStyle">italic</item>
+    <style name="Chats" parent="@android:style/TextAppearance.Material">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">?attr/textColorPrimary</item>
+    </style>
+    <style name="Chats.Time">
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="Chats.Header">
+        <item name="android:textSize">16sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+    <style name="Chats.Body">
+        <item name="android:textSize">14sp</item>
+    </style>
+    <style name="Chats.Counter">
+        <item name="android:textColor">?attr/textColorSecond</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="Messages" parent="@android:style/TextAppearance.Material">
+        <item name="android:textSize">14sp</item>
+        <item name="android:textStyle">normal</item>
+        <item name="android:textColor">?attr/textColorPrimary</item>
+    </style>
+    <style name="Messages.Time">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">?attr/textColorBackground</item>
+    </style>
+    <style name="Messages.Time.Contrast">
+        <item name="android:textSize">12sp</item>
+        <item name="android:textColor">?attr/textColorPrimary</item>
+    </style>
+    <style name="Messages.Body">
+        <item name="android:textSize">14sp</item>
     </style>
 
     <style name="TextLabel" parent="Widget.MaterialComponents.TextInputLayout.FilledBox">
