--- a/app/src/main/res/drawable-v24/background_subcard_layout.xml
+++ b/app/src/main/res/drawable-v24/background_subcard_layout.xml
@@ -2,8 +2,8 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <corners android:radius="15dp" />
-            <solid android:color="@color/error" />
+            <corners android:radius="5dp" />
+            <stroke android:color="@color/dark_gray" android:width="1dp" />
         </shape>
     </item>
 </selector>
