--- a/app/src/main/res/layout/item_circle_profile.xml
+++ b/app/src/main/res/layout/item_circle_profile.xml
@@ -7,17 +7,16 @@
 
     <ImageView
         android:id="@+id/avatar"
-        android:layout_width="50dp"
-        android:layout_height="wrap_content"
+        android:layout_width="65dp"
+        android:layout_height="65dp"
         android:layout_marginStart="6dp"
         android:layout_marginTop="6dp"
         android:layout_marginEnd="6dp"
         android:adjustViewBounds="true"
-        android:scaleType="fitCenter"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+        app:srcCompat="@drawable/ic_circle_24" />
 
     <TextView
         android:id="@+id/full_name_text_view"
@@ -27,7 +26,7 @@
         android:layout_marginTop="4dp"
         android:layout_marginEnd="6dp"
         android:textAlignment="center"
-        android:textSize="10sp"
+        android:textAppearance="@style/Profile.Status"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/avatar"
